<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"

    tools:context="com.adam.christina.androidfinal.TuitionCalc">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:orientation="vertical"

>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tuitionCalc"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText15"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/numClass"
        android:inputType="numberDecimal"
        android:layout_marginTop="15dp"
        android:minWidth="200dp"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText16"
        android:layout_below="@+id/editText15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/tuitionCost"
        android:maxWidth="200dp"
        android:minWidth="200dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instateRes"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/editText16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:minWidth="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instateDiscount"
        android:id="@+id/textView7"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:phoneNumber="false"
        android:password="false"
        android:minWidth="200dp"
        android:minHeight="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText17"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:hint="@string/grant"
        android:minWidth="200dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText18"
        android:layout_below="@+id/editText17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:hint="@string/finanAid"
        android:minWidth="200dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText19"
        android:layout_below="@+id/editText18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:hint="@string/estBooks"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcTuitionBtn"
        android:id="@+id/button6"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="calculateTuition"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estTotal"
        android:id="@+id/textView8"
        android:minWidth="200dp"
        android:minHeight="40dp"
        android:textSize="20dp"
        android:textIsSelectable="false"
        android:gravity="center"
        android:layout_alignBottom="@+id/button6"
         />
</GridLayout>
</ScrollView>
