<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    tools:context="com.adam.christina.androidfinal.GpaScreen">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:text="@string/title1"
        android:id="@+id/textView1"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aA"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="25dp"

        />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/A"
                android:layout_alignTop="@+id/textView2"
                android:layout_alignRight="@+id/button5"
                android:lines="1"
                android:layout_marginLeft="30dp"
                android:singleLine="true"
                android:minWidth="10dp"
                android:layout_alignStart="@+id/textView7"
                android:minHeight="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aB"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="25dp"
        />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/B"
                android:layout_alignTop="@+id/textView3"
                android:layout_alignRight="@+id/button5"
                android:layout_alignStart="@+id/A" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aC"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="25dp"
        />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/C"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignRight="@+id/button5"
                android:layout_alignStart="@+id/B" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aD"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="25dp"
        />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/D"
                android:layout_alignTop="@+id/textView5"
                android:layout_alignRight="@+id/button5"
                android:layout_alignStart="@+id/C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aF"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/F"
                android:layout_alignTop="@+id/textView6"
                android:layout_alignRight="@+id/button5"
                android:layout_alignStart="@+id/D" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/GPA"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/textView7"
        android:onClick="calculate"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/textView7"
        android:onClick="backHome"/>


</RelativeLayout>
