<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/userName"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="135dp"
    android:hint="@string/username"
    android:gravity="center"
    android:maxLines="1"
    android:maxLength="240"
    android:minWidth="240dp"
    android:minHeight="50dp"
    android:maxHeight="50dp"
    android:inputType="text"
    android:textSize="@dimen/abc_text_size_medium_material" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/passWord"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="200dp"
    android:hint="@string/password"
    android:gravity="center"
    android:maxLines="1"
    android:maxLength="240"
    android:minWidth="240dp"
    android:minHeight="50dp"
    android:maxHeight="50dp"
    android:inputType="textPassword"
    android:textSize="@dimen/abc_text_size_medium_material"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:id="@+id/loginBtn"
    android:layout_below="@+id/passWord"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="60dp"
    android:onClick="loginScreen"/>

<View
    android:id="@+id/divider"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#000000"
    android:layout_below="@+id/loginBtn"
    android:layout_marginTop="120dp" />

<Button
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/apply"
    android:id="@+id/applyBtn"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:onClick="createScreen"/>

<Button
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot"
    android:id="@+id/forgotBtn"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/divider"
    android:layout_alignEnd="@+id/divider"
    android:onClick="forgotInfo"/>


</RelativeLayout>
