<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adam.christina.androidfinal.Forgot">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text= "@string/email"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:minLines="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailForgot"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailBtn"
        android:id="@+id/button"
        android:layout_marginTop="59dp"
        android:onClick="sendEmail"
        android:layout_below="@+id/emailForgot"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToMain"
        android:text="@string/backBtn"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
