<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adam.christina.androidfinal.Home">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentInfo"
            android:id="@+id/studentInfo"
            android:minWidth="400dp"
            android:maxWidth="40dp"
            android:minHeight="115dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:maxHeight="115dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleBtn"
            android:id="@+id/scheduleBtn"
            android:minWidth="170dp"
            android:maxWidth="40dp"
            android:minHeight="95dp"
            android:maxHeight="95dp"
            android:layout_below="@+id/dividerHome1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:onClick="goToSchedule"/>


        <View
            android:id="@+id/dividerHome1"
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="#000000"
            android:layout_marginTop="325dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuitionBtn"
            android:id="@+id/tuitionBtn"
            android:minWidth="170dp"
            android:maxWidth="40dp"
            android:minHeight="95dp"
            android:maxHeight="95dp"
            android:layout_alignTop="@+id/scheduleBtn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="goToTuition"/>

        <View
            android:id="@+id/dividerHome2"
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="#000000"
            android:layout_below="@+id/dividerHome1"
            android:layout_marginTop="110dp" />

        <View
            android:id="@+id/dividerHome3"
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:background="#000000"
            android:layout_below="@+id/dividerHome1"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpaScreenBtn"
            android:id="@+id/gpaScreenBtn"
            android:minWidth="170dp"
            android:maxWidth="40dp"
            android:minHeight="95dp"
            android:maxHeight="95dp"
            android:layout_below="@+id/dividerHome2"
            android:onClick="goToGpa"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookBtn"
            android:id="@+id/bookBtn"
            android:minWidth="170dp"
            android:maxWidth="40dp"
            android:minHeight="95dp"
            android:maxHeight="95dp"
            android:layout_below="@+id/dividerHome2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="goToBookstore"/>

</RelativeLayout>
